fix: change text alignment to justify for better readability in project description

--- a/_sass/partials/_projects.scss
+++ b/_sass/partials/_projects.scss
@@ -112,7 +112,7 @@
 
 .project-description {
   font-size: 0.9rem;
-  text-align: left;
+  text-align: justify;
   color: var(--color-text-muted);
   margin-bottom: 0rem;
   line-height: 1.4;
